# rust-sqlite3

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/sqlite3/: trait.QueryFold.js
sqlite3/: enum.ColumnType.html  enum.SqliteErrorCode.html  index.html  sidebar-items.js  struct.QueryResults.html  struct.SqliteError.html  trait.Query.html  trait.QueryEach.html  trait.QueryFold.html  trait.ResultRowAccess.html  trait.RowIndex.html  trait.StatementUpdate.html  type.SqliteResult.html
sqlite3/access/: fn.open.html  index.html  sidebar-items.js  struct.ByFilename.html
sqlite3/core/: enum.SqliteOk.html  fn.decode_result.html  fn.str_charstar.html  index.html  sidebar-items.js  struct.DatabaseConnection.html  struct.PreparedStatement.html  struct.ResultRow.html  struct.ResultSet.html  trait.Access.html  type.ColIx.html  type.ParamIx.html
sqlite3/ffi/: enum.Struct_Mem.html  enum.Struct_sqlite3.html  enum.Struct_sqlite3_backup.html  enum.Struct_sqlite3_blob.html  enum.Struct_sqlite3_context.html  enum.Struct_sqlite3_mutex.html  enum.Struct_sqlite3_pcache.html  enum.Struct_sqlite3_stmt.html  fn.sqlite3_aggregate_context.html  fn.sqlite3_aggregate_count.html  fn.sqlite3_auto_extension.html  fn.sqlite3_backup_finish.html  fn.sqlite3_backup_init.html  fn.sqlite3_backup_pagecount.html  fn.sqlite3_backup_remaining.html  fn.sqlite3_backup_step.html  fn.sqlite3_bind_blob.html  fn.sqlite3_bind_double.html  fn.sqlite3_bind_int.html  (+252 more)
src/: access.rs  consts.rs  core.rs  ffi.rs  lib.rs  log.rs  safe.rs  types.rs
tests/: ex.rs  opening.rs  typical.rs
(+45 files in other folders)
