[package]

name = "rust-sqlite"
version = "0.1.3"
authors = ["Dan Connolly <dckc@madmode.com>"]
keywords = ["database", "sql"]

exclude = [
    ".hg/*",
    "*.orig",
    "*~",
]

description = "Rustic bindings for sqlite3"
repository = "https://github.com/dckc/rust-sqlite3"
readme = "README.md"

license = "MIT"

[lib]
name = "sqlite3"

[dependencies]
bitflags = "0.1.0"

[dependencies.time]
time = "0.1.5"
