[package]

name = "rust-sqlite"
version = "0.3.1"
authors = [
  "Dan Connolly <dckc@madmode.com>",
  "Peter Reid <peter.d.reid@gmail.com>"
]
keywords = ["database", "sql", "sqlite"]

exclude = [
    ".hg/*",
    "*.orig",
    "*~",
]

description = "Rustic bindings for sqlite3"
repository = "https://github.com/dckc/rust-sqlite3"
readme = "README.md"
documentation = "http://dckc.github.io/rust-sqlite3"

license = "MIT"

[lib]
name = "sqlite3"

[dependencies]
bitflags = "^0.1.0"
enum_primitive = "0.1.0"
libc = "0.2.5"
time = "^0.1.5"
